# LNK4206

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: lib.h
lib/: CMakeLists.txt  lib.cpp  pch.h
src/: CMakeLists.txt  main.cpp
